--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcuserstate
