--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 *.xcuserstate
 *.xcuserstate
 Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
