--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 *.xcuserstate
 Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
+*.xcuserstate
