--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
 *.xcuserstate
+Pods/.DS_Store
