--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcus
 *.xcuserstate
 *.xcuserstate
 Pods/.DS_Store
+*.xcuserstate
