--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcus
 *.xcuserstate
 Pods/.DS_Store
 *.xcuserstate
+*.xcuserstate
