--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcus
 Pods/.DS_Store
 *.xcuserstate
 *.xcuserstate
+*.xcuserstate
