--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Pods/.DS_Store
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcuserstate
