-- upd: Rename id

--- a/Project/Another/Info.plist
+++ b/Project/Another/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Zettai Goukaku - Nouryoku Shiken</string>
+	<string>Zettai Goukaku</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
