--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Pods/.DS_Store
 *.xcuserstate
 *.xcuserstate
 Project.xcworkspace/xcuserdata/burakkuookami.xcuserdatad/UserInterfaceState.xcuserstate
+.DS_Store
